# UNet-Segmentator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.dvc/: config
data/raw/: .gitignore  IMAGES.dvc  MASKS.dvc
docs/: Makefile  conf.py  index.rst  make.bat
src/: __init__.py
src/data/: dataset.py  df_maker.py
