[tool.poetry]
name = "unet-segmentator"
version = "0.1.0"
description = ""
authors = ["Vladislav Vinokurov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
sphinx = "^8.0.2"
coverage = "^7.6.0"
flake8 = "^7.1.0"
python-dotenv = ">=0.5.1"
pandas = "^2.2.2"
mlflow = "^2.15.0"
dvc = "^3.53.0"
dvc-s3 = "^3.2.0"
torch = "^2.4.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
